src/main/grammars/Racket.bnf
{
  parserClass="org.racket.lang.core.parser.RacketParser"

  implements="org.racket.lang.core.psi.RacketElement"
  extends="com.intellij.extapi.psi.ASTWrapperPsiElement"

  psiClassPrefix="Racket"
  psiImplClassSuffix="Impl"
  psiPackage="org.racket.lang.core.psi"
  psiImplPackage="org.racket.lang.core.psi.impl"

  elementTypeHolderClass="org.racket.lang.core.psi.RacketElementTypes"
  elementTypeClass="org.racket.lang.core.psi.RacketElementType"
  tokenTypeClass="org.racket.lang.core.psi.RacketTokenType"

  psiImplUtilClass="org.racket.lang.core.psi.impl.RacketPsiImplUtil"
}

RacketFile ::= HASH_LANG Item* | Item*

private Item ::=
  Form
  | COMMENT
  | SEXP_COMMENT
  | CRLF

private Form ::=
  Datum
  | DOT
  | CHARACTER
  | NUMBER
  | BOOLEAN
  | STRING
  | HERE_STRING
  | IDENTIFIER
  | KEYWORD
  | List

List ::=
  OPEN_PAREN Item* CLOSE_PAREN
  | OPEN_SQUARE Item* CLOSE_SQUARE
  | OPEN_BRACE Item* CLOSE_BRACE

Datum ::=
  CONSTANT Form
  | UNQUOTE Form
